[package]
name = "dnetd"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.18"
memmap = "0.7.0"
memfd = "0.5.1"
log = "0.4.14"
stderrlog = "0.5.1"
anyhow = "1.0.47"
libc = "0.2.125"
thiserror = "1.0.31"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
strip = true
